--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="school of software reddit"
     />
+    <meta name="keywords" content="reddit">
+    <meta name="copyright" content="jameslahm">
+    <meta name="author" content="jameslahm,jameslahm17@gmail.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
