--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="school of software reddit"
-    />
-    <meta name="keywords" content="reddit">
-    <meta name="copyright" content="jameslahm">
-    <meta name="author" content="jameslahm,jameslahm17@gmail.com">
+    <meta name="description" content="school of software reddit" />
+    <meta name="keywords" content="reddit" />
+    <meta name="copyright" content="jameslahm" />
+    <meta name="author" content="jameslahm,jameslahm17@gmail.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo128.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/styles/atom-one-dark.min.css"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -47,4 +48,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+  <script
+    defer
+    src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.18.1/build/highlight.min.js"
+  ></script>
 </html>
